v1/advanced/scroll-management.mdx
---
title: Scroll management
---

<Warning>This is documentation for Inertia.js v1, which is no longer actively maintained. Please refer to the <a href="/v2/getting-started">v2 docs</a> for the latest information.</Warning>

## Scroll resetting

When navigating between pages, Inertia mimics default browser behavior by automatically resetting the scroll position of the document body (as well as any [scroll regions](#scroll-regions) you've defined) back to the top.

In addition, Inertia keeps track of the scroll position of each page and automatically restores that scroll position as you navigate forward and back in history.

## Scroll preservation

Sometimes it's desirable to prevent the default scroll resetting when making visits. You can disable this behavior by setting the `preserveScroll` option to `false`.

<CodeGroup>

```js Vue 2 
import { router } from '@inertiajs/vue2'

router.visit(url, { preserveScroll: false })
```

```js Vue 3 
import { router } from '@inertiajs/vue3'

router.visit(url, { preserveScroll: false })
```

```js React icon="react"
import { router } from '@inertiajs/react'

router.visit(url, { preserveScroll: false })
```

```js Svelte icon="s"
import { router } from '@inertiajs/svelte'

router.visit(url, { preserveScroll: false })
```

</CodeGroup>

If you'd like to only preserve the scroll position if the response includes validation errors, set the `preserveScroll` option to "errors".

<CodeGroup>

```js Vue 2 
import { router } from '@inertiajs/vue2'

router.visit(url, { preserveScroll: 'errors' })
```

```js Vue 3 
import { router } from '@inertiajs/vue3'

router.visit(url, { preserveScroll: 'errors' })
```

```js React icon="react"
import { router } from '@inertiajs/react'

router.visit(url, { preserveScroll: 'errors' })
```

```js Svelte icon="s"
import { router } from '@inertiajs/svelte'

router.visit(url, { preserveScroll: 'errors' })
```

</CodeGroup>

You can also lazily evaluate the `preserveScroll` option based on the response by providing a callback.

<CodeGroup>

```js Vue 2 
import { router } from '@inertiajs/vue2'

router.post('/users', data, {
  preserveScroll: (page) => page.props.someProp === 'value',
})
```

```js Vue 3 
import { router } from '@inertiajs/vue3'

router.post('/users', data, {
  preserveScroll: (page) => page.props.someProp === 'value',
})
```

```js React icon="react"
import { router } from '@inertiajs/react'

router.post('/users', data, {
  preserveScroll: (page) => page.props.someProp === 'value',
})
```

```js Svelte icon="s"
import { router } from '@inertiajs/svelte'

router.post('/users', data, {
  preserveScroll: (page) => page.props.someProp === 'value',
})
```

</CodeGroup>

When using an [Inertia link](/v1/the-basics/links), you can preserve the scroll position using the `preserveScroll` prop.

<CodeGroup>

```jsx Vue 2 
import { Link } from '@inertiajs/vue2'

<a href="/" preserve-scroll>Home</a>
```

```jsx Vue 3 
import { Link } from '@inertiajs/vue3'

<a href="/" preserve-scroll>Home</a>
```

```jsx React icon="react"
import { Link } from '@inertiajs/react'

<a preserveScroll href="/">Home</a>
```

```jsx Svelte icon="s"
import { inertia, Link } from '@inertiajs/svelte'

<a href="/" use:inertia="{{ preserveScroll: true }}">Home</a>

<a href="/" preserveScroll>Home</a>
```

</CodeGroup>

## Scroll regions

If your app doesn't use document body scrolling, but instead has scrollable elements (using the `overflow` CSS property), scroll resetting will not work.

In these situations, you must tell Inertia which scrollable elements to manage by adding the `scroll-region` attribute to the element.

```html
<div class="overflow-y-auto" scroll-region>
\<!-- Your page content -->
</div>
```